--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,11 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
+
+
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
@@ -23,25 +28,19 @@
     <script src="js/vendor/imgcache.js"></script>
     <script src="js/vendor/moment.min.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/sharedlibs/settings.js"></script>
-    <script src="js/modules/controllers.js"></script>
-    <script src="js/modules/auth.js"></script>
-    <script src="js/sharedlibs/directives.js"></script>
-    <script src="js/sharedlibs/services.js"></script>
-
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
-
     <!-- your app's js -->
     <script src="js/app.js"></script>
   </head>
   <body ng-app="tcApp">
     <ion-nav-view name="mainContent" animation="slide-left-right"></ion-nav-view>
     <ion-nav-view name="noHeaderContent"></ion-nav-view>
+  <!-- your app's js -->
+  <script src="js/app.js"></script>
+  <script src="js/sharedlibs/settings.js"></script>
+  <script src="js/modules/controllers.js"></script>
+  <script src="js/modules/auth.js"></script>
+  <script src="js/sharedlibs/directives.js"></script>
+  <script src="js/sharedlibs/services.js"></script>
+  <script src="js/sharedlibs/maps.js"></script>
   </body>
 </html>
