--- a/www/index.html
+++ b/www/index.html
@@ -33,8 +33,8 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="tcApp">
-    <ion-nav-view name="mainContent" animation="slide-left-right"></ion-nav-view>
-    <ion-nav-view name="noHeaderContent"></ion-nav-view>
+    <ion-nav-view name="maincontent" animation="slide-left-right"></ion-nav-view>
+    <ion-nav-view name="noheadercontent"></ion-nav-view>
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/sharedlibs/settings.js"></script>
@@ -43,5 +43,6 @@
   <script src="js/sharedlibs/directives.js"></script>
   <script src="js/sharedlibs/services.js"></script>
   <script src="js/sharedlibs/maps.js"></script>
+  <script src="js/vendor/jquery.interactive_bg.js"></script>
   </body>
 </html>
