--- a/www/index.html
+++ b/www/index.html
@@ -33,8 +33,12 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="tcApp">
-    <ion-nav-view name="maincontent" animation="slide-left-right"></ion-nav-view>
-    <ion-nav-view name="noheadercontent"></ion-nav-view>
+    <div class="main-ctrl" ng-controller="MainCtrl">
+      <ion-nav-view name="maincontent" animation="slide-left-right"></ion-nav-view>
+      <div class="full-screen-container" ng-show="mainCfg.viewNoHeaderIsActive">
+        <ion-nav-view name="noheadercontent"></ion-nav-view>
+      </div>
+    </div>
   <!-- your app's js -->
   <script src="js/app.js"></script>
   <script src="js/sharedlibs/settings.js"></script>
