--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,9 @@
     <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="js/vendor/imgcache.js"></script>
     <script src="js/vendor/moment.min.js"></script>
+    <!-- // <script src="js/vendor/geolib.js"></script> -->
+    <!-- // <script src="js/vendor/geolib.elevation.js"></script> -->
+    <!-- // <script src="js/vendor/pouchdb-3.3.1.min.js"></script> -->
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
