--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/vendor/geolib.js"></script>
     <script src="js/vendor/geolib.elevation.js"></script>
     <script src="js/vendor/pouchdb-3.3.1.min.js"></script>
+    <script src="js/vendor/pouchdb.quick-search.min.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -51,7 +52,12 @@
   <script src="js/modules/controllers.js"></script>
   <script src="js/modules/auth.js"></script>
   <script src="js/sharedlibs/directives.js"></script>
-  <script src="js/sharedlibs/services.js"></script>
+  <script src="js/sharedlibs/services/services.js"></script>
+  <script src="js/sharedlibs/services/updates.js"></script>
+  <script src="js/sharedlibs/services/location.js"></script>
+  <script src="js/sharedlibs/services/appbootstrap.js"></script>
+  <script src="js/sharedlibs/services/authentication.js"></script>
+  <script src="js/sharedlibs/services/messaging.js"></script>
   <script src="js/sharedlibs/maps.js"></script>
   <script src="lib/vegas/dist/vegas.min.js"></script>
 
